fixed minor layout issues

--- a/static/css/_base.scss
+++ b/static/css/_base.scss
@@ -94,9 +94,10 @@ button, input, select, textarea, md-select {
             text-align: center;
         }
         & a {
-            color: $palette_tertiary;
+            color: $blue500;
             text-decoration: none;
-            border-bottom: solid 1px $palette_tertiary;
+            border-bottom: solid 1px $blue500;
+            font-weight: 500;
         }
     }
     & ._body {
